--- a/user_management/templates/registration/user_profile.html
+++ b/user_management/templates/registration/user_profile.html
@@ -1,31 +1,44 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="post">{% csrf_token %}
-	{% for field in account_form %}
-		<p>
-			{{field.label_tag}}
-			{{field}}
+    <div class="container">
+    <form method="post">{% csrf_token %}
+        <div class="form-group">
 
-			{% if field.help_text %}
-				<small style="color: grey;">{{field.help_text}}</small>
-			{% endif %}
+            {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-success" role="alert">
+                          {{ message }}
+                        </div>
+                    {% endfor %}
+            {% endif %}
 
-		</p>
-	{% endfor %}
 
-	{% for field in account_form %}
-		{% for error in field.errors %}
-			<p style="color: red;">{{error}}</p>
-		{% endfor %}
-	{% endfor %}
+            {% for field in account_form %}
+                <p>
+                    {{field.label_tag}}
+                    {{field}}
 
-	{% if account_form.non_field_errors %}
-		<div style="color:red;">
-			<p>{{account_form.non_field_errors}}</p>
-		</div>
-	{% endif %}
-	<button type="submit">Save changes</button>
+                    {% if field.help_text %}
+                        <small style="color: grey;">{{field.help_text}}</small>
+                    {% endif %}
 
-</form>
+                </p>
+            {% endfor %}
+
+            {% for field in account_form %}
+                {% for error in field.errors %}
+                    <p style="color: red;">{{error}}</p>
+                {% endfor %}
+            {% endfor %}
+
+            {% if account_form.non_field_errors %}
+                <div style="color:red;">
+                    <p>{{account_form.non_field_errors}}</p>
+                </div>
+            {% endif %}
+            <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
+    </form>
+    </div>
 {% endblock %}
