--- a/user_management/templates/registration/user_profile.html
+++ b/user_management/templates/registration/user_profile.html
@@ -2,25 +2,26 @@
 
 {% block content %}
     <div class="container">
-    <form method="post">{% csrf_token %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-success" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    <form method="post" enctype="multipart/form-data">{% csrf_token %}
         <div class="form-group">
             {% if request.user.is_authenticated %}
 
                 <p class="h5"> Account Setting of: {{ user.first_name }} {{ user.last_name }}</p>
 
-                {% if {{ user.image.url }} %}
+                {% if  user.image.url  is not None %}
                     <img src="{{ user.image.url }}" alt="user profile image" width="240">
                 {% else %}
                     <img src="/static/images/default_picture.png" alt="user profile image" width="240">
+
                 {% endif %}
 
-                {% if messages %}
-                        {% for message in messages %}
-                            <div class="alert alert-success" role="alert">
-                              {{ message }}
-                            </div>
-                        {% endfor %}
-            {% endif %}
             {% endif %}
 
             {% for field in account_form %}
