--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Material icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>{% block title %} {% endblock %}</title>
@@ -47,7 +49,7 @@
                     </li>
                     {% if user.is_vendor  %}
                         <li>
-                            <a  class="btn btn-outline-success"  href=" {% url 'product_management:product_management' %}">
+                            <a  class="btn btn-outline-success"  href=" {% url 'product_management:product_management' user.id %}">
                                 Products
                             </a>
                         </li>
