--- a/product_management/templates/product_setting/add.html
+++ b/product_management/templates/product_setting/add.html
@@ -6,7 +6,14 @@
 
 {% block content %}
     <div class="container">
-    <h1>Create Product</h1>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-success" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+        <h1>Create Product</h1>
 {#    <form method="post">{% csrf_token %}#}
 {#        {{ form|crispy }}#}
 {#        <input class="btn btn-success" type="submit" value="Create">#}
