add working edit button

--- a/product_management/templates/product_setting/dashboard.html
+++ b/product_management/templates/product_setting/dashboard.html
@@ -36,7 +36,7 @@
                          '                      <a class="deleteButton btn btn-danger"  data-toggle="modal" data-target="#DeleteModal" id="Product'+i+'">\n' +
                          '                        <i class="material-icons">delete_forever</i>\n' +
                          '                      </a>\n' +
-                         '                      <a class="btn btn-success">\n' +
+                         '                      <a class="btn btn-success" href="/product/management/'+list.products_list[i].id+'/change">' +
                          '                         <i class="material-icons">brush</i>\n' +
                          '           </a>';
                      var row = '<tr id="row'+list.products_list[i].id+'">'+
