removed useless fields

--- a/product_management/templates/product_setting/dashboard.html
+++ b/product_management/templates/product_setting/dashboard.html
@@ -11,7 +11,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Price</th>
-                    <th scope="col">Discount</th>
+                    <th scope="col">Category</th>
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
@@ -44,7 +44,7 @@
                             '<td>'+list.products_list[i].name + '</td>'+
                             '<td>'+list.products_list[i].quantity + '</td>'+
                             '<td>'+list.products_list[i].price + '</td>'+
-                            '<td>'+list.products_list[i].discount + '</td>'+
+                            '<td>'+list.products_list[i].category + '</td>'+
                             '<td>'+actions+ '</td>'+
                             '</tr>';
                      $('#products_table > tbody:first').append(row);
