--- a/product_management/templates/product_setting/detail.html
+++ b/product_management/templates/product_setting/detail.html
@@ -88,7 +88,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" id="reviewConfirm" class="btn btn-primary">Yes</button>
+        <button type="button" id="reviewConfirm" class="btn btn-primary">Add Review</button>
       </div>
     </div>
   </div>
