--- a/product_management/templates/product_setting/detail.html
+++ b/product_management/templates/product_setting/detail.html
@@ -49,7 +49,7 @@
                 <button class="btn btn-light"><a href="{% url 'user_management:login' %}">LOG IN TO ADD A REVIEW</a></button>
             {% endif %}
 
-            <table class="table table-bordered" id="reviewTable">
+            <table class="table table-unbordered" id="reviewTable">
             <tbody>
 
             </tbody>
